<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iEnvironment</string>
    <string name="title_home">Home</string>
    <string name="navigation_drawer_open">Abrir navigation drawer</string>
    <string name="navigation_drawer_close">Cerrar navigation drawer</string>
    <string name="item_sesion">Sesión</string>
    <string name="item_configuracion">Configuración</string>
    <string name="item_salir">Salir</string>
    <string name="item_acerca_de">Acerca de aGarden</string>
    <string name="titulo_salir">¿Desea salir?</string>
    <string name="mensaje_salir">Pulse Si para salir!</string>
    <string name="titulo_config"><u>Configuración</u></string>
    <string name="tituloAbout"><u>Acerca de</u></string>
    <string name="stringAbout">App diseñada por Alberto Ramírez Losilla y dirigida por el Doctor Jose Luis Poza Luján para trabajo de fin de Grado de Ingeniería Informática en la UPV para el curso 2013-2014</string>
    <string name="email">alramlo@inf.upv.es</string>
    <string name="advertenciaInicio">Inicie sesión para comenzar a utilizar la app</string>
    <string name="etiquetaIP">Dirección IP:</string>
    <string name="punto">.</string>
    <string name="ipDefecto">000</string>
    <string name="guardar">Guardar</string>
    <string name="tituloSesion"><u>Sesión</u></string>
    <string name="usuario">Usuario:</string>
    <string name="password">Contraseña:</string>
    <string name="botonSesion">Iniciar Sesión</string>
    <string name="mensajeIpIncorrecta">Ip incompleta</string>
    <string name="guardadoExito">Guardado con éxito</string>
    <string name="noInternet">Conexión de datos no disponible</string>
    <string name="noIp">Introduzca Ip del Servidor</string>
    <string name="loginOk">Ha iniciado sesión correctamente</string>
    <string name="loginDenied">Error en usuario o contraseña</string>
    <string name="errorApp">Error app</string>
    <string name="errorServicio">Error Servicio</string>
    <string name="logout">Cerrar sesión</string>
    <string name="mensajeLogout">Ha cerrado sesión correctamente</string>
    <string name="pestañaOperaciones">Operaciones</string>
    <string name="pestañaEstado">Estado</string>
    <string name="inicio">Inicie sesión</string>
    <string name="errorSesion">Error en la sesión de usuario.</string>
</resources>
