<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tituloAbout"
        android:id="@+id/textViewTituloAbout"
        android:layout_gravity="center_horizontal"
        style="@style/texto_titulo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/stringAbout"
        android:id="@+id/textViewAcercaDe"
        style="@style/texto_normal"
        android:autoText="false"
        android:background="#ffffff" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/alberto" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:id="@+id/textViewEmail"
        android:layout_gravity="center_horizontal"
        android:linksClickable="false"
        android:clickable="true"
        style="@style/link"
        android:background="#ffffff"
        android:onClick="onClickEmail" />
</LinearLayout>