<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tituloSesion"
        android:id="@+id/textViewTituloSesion"
        android:layout_gravity="center_horizontal"
        style="@style/texto_titulo"
        android:layout_weight="1" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="10">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/usuario"
                android:id="@+id/textViewUsuario"
                style="@style/texto_normal" />

            <EditText
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:id="@+id/editText"
                style="@style/input" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/password"
                android:id="@+id/textViewPassword"
                style="@style/texto_normal" />

            <EditText
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText2"
                style="@style/input" />
        </TableRow>
    </TableLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:id="@+id/imageView"
        style="@style/separador" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botonSesion"
        android:id="@+id/buttonIniciarSesion"
        style="@style/boton_app"
        android:onClick="login" />

</LinearLayout>